--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <link rel='stylesheet' type='text/css' href='style/style.css'>
   </head>
   <body>
     <section>
@@ -16,6 +17,7 @@
       </p>
     </section>
     <script src="src/thermostat.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="src/interface.js"></script>
   </body>
 </html>
