--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <button id="powersaving-off">PSM off</button>
       </p>
     </section>
+    <section>
+      <h3 id="weather-city"></h3>
+      <p>
+        <span id="weather-temperature"></span>°C - 
+        <span id="weather-description"></span>
+      </p>
+      <p>
+        <input type="text" id="city-name" placeholder="Enter your city">
+        <button id="change-city">Submit</button>
+      </p>
+    </section>
     <script src="src/thermostat.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="src/interface.js"></script>
